[gd_scene load_steps=16 format=4 uid="uid://bj4dx0uj3gnj7"]

[ext_resource type="PackedScene" uid="uid://c182jfsfqlndt" path="res://sceens/player.tscn" id="1_jxvsc"]
[ext_resource type="Texture2D" uid="uid://dcpgshdgo8uqw" path="res://TestScene/assets/Starter Tiles Platformer/IceSet.png" id="2_t0o6i"]
[ext_resource type="Texture2D" uid="uid://cwsesqwuryfo3" path="res://TestScene/assets/Starter Tiles Platformer/BasicGreen.png" id="3_yjgmw"]
[ext_resource type="Texture2D" uid="uid://bqmaiaosynhgf" path="res://TestScene/assets/Starter Tiles Platformer/DarkCastle.png" id="4_yyjxy"]
[ext_resource type="Texture2D" uid="uid://besvtnkxyntft" path="res://TestScene/assets/Starter Tiles Platformer/FireSet.png" id="5_pxj2y"]
[ext_resource type="PackedScene" path="res://sceens/player2.tscn" id="6_ysy4v"]
[ext_resource type="PackedScene" uid="uid://b1871r8rfq64s" path="res://sceens/stopwatch.tscn" id="7_dblw3"]
[ext_resource type="Script" path="res://scripts/killZone.gd" id="8_3e66b"]
[ext_resource type="AudioStream" uid="uid://yf2a3om6woyh" path="res://MusicNSounds/1min-2021-08-17_-_8_Bit_Nostalgia_-_www.FesliyanStudios.com.mp3" id="8_v2fwn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m6ewi"]
texture = ExtResource("2_t0o6i")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -0.618719, -8, 8, 8, 8, 8, -8, -8, -8, -8, -0.5)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ofv0"]
texture = ExtResource("3_yjgmw")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bdpg4"]
texture = ExtResource("4_yyjxy")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, -1)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
0:2/0/texture_origin = Vector2i(0, -1)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v0gcr"]
texture = ExtResource("5_pxj2y")
0:0/0 = 0
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0

[sub_resource type="TileSet" id="TileSet_i56x7"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_m6ewi")
sources/2 = SubResource("TileSetAtlasSource_6ofv0")
sources/3 = SubResource("TileSetAtlasSource_bdpg4")
sources/4 = SubResource("TileSetAtlasSource_v0gcr")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_3rkf4"]
distance = 242.0

[node name="Level" type="Node2D"]
position = Vector2(1, 0)
metadata/_edit_horizontal_guides_ = [-51.0]

[node name="player1" parent="." groups=["players"] instance=ExtResource("1_jxvsc")]
position = Vector2(-207, -224)

[node name="walking ground" type="TileMapLayer" parent="."]
position = Vector2(67, -144)
tile_map_data = PackedByteArray("AADr//z/AgAJAAAAAADs//z/AgAJAAAAAADt//z/AgAJAAAAAADu//z/AgAJAAAAAADv//z/AgAJAAAAAADw//z/AgAJAAAAAADx//z/AgAJAAAAAADy//z/AgAJAAAAAADz//z/AgAJAAAAAAD0//z/AgAJAAAAAAD1//z/AgAJAAAAAAD2//z/AgAJAAAAAAD3//z/AgAJAAAAAAD4//z/AgAJAAAAAAD5//z/AgAJAAAAAAD6//z/AgAJAAAAAAD7//z/AgAJAAAAAAD8//z/AgAJAAAAAAD9//z/AgAJAAAAAAD+//z/AgAJAAAAAAD///z/AgAJAAAAAAAAAPz/AgAJAAAAAAABAPz/AgAJAAAAAAACAPz/AgAJAAAAAAADAPz/AgAJAAAAAAAEAPz/AgAJAAAAAAAFAPz/AgAJAAAAAAAGAPz/AgAJAAAAAAAHAPz/AgAJAAAAAAAIAPz/AgAJAAAAAAAJAPz/AgAJAAAAAAAKAPz/AgAJAAAAAAALAPz/AgAJAAAAAAAMAPz/AgAJAAAAAAANAPz/AgAJAAAAAAAOAPz/AgAJAAAAAAAPAPz/AgAJAAAAAADr//3/AgAJAAEAAADr//7/AgAJAAEAAADr////AgAJAAEAAADr/wAAAgAJAAEAAADr/wEAAgAJAAEAAADr/wIAAgAJAAEAAADr/wMAAgAJAAEAAADr/wQAAgAJAAEAAADr/wUAAgAJAAEAAADr/wYAAgAJAAEAAADr/wcAAgAJAAEAAADr/wgAAgAJAAEAAADs//3/AgAJAAEAAADs//7/AgAJAAEAAADs////AgAJAAEAAADs/wAAAgAJAAEAAADs/wEAAgAJAAEAAADs/wIAAgAJAAEAAADs/wMAAgAJAAEAAADs/wQAAgAJAAEAAADs/wUAAgAJAAEAAADs/wYAAgAJAAEAAADs/wcAAgAJAAEAAADs/wgAAgAJAAEAAADt//3/AgAJAAEAAADt//7/AgAJAAEAAADt////AgAJAAEAAADt/wAAAgAJAAEAAADt/wEAAgAJAAEAAADt/wIAAgAJAAEAAADt/wMAAgAJAAEAAADt/wQAAgAJAAEAAADt/wUAAgAJAAEAAADt/wYAAgAJAAEAAADt/wcAAgAJAAEAAADt/wgAAgAJAAEAAADu//3/AgAJAAEAAADu//7/AgAJAAEAAADu////AgAJAAEAAADu/wAAAgAJAAEAAADu/wEAAgAJAAEAAADu/wIAAgAJAAEAAADu/wMAAgAJAAEAAADu/wQAAgAJAAEAAADu/wUAAgAJAAEAAADu/wYAAgAJAAEAAADu/wcAAgAJAAEAAADu/wgAAgAJAAEAAADv//3/AgAJAAEAAADv//7/AgAJAAEAAADv////AgAJAAEAAADv/wAAAgAJAAEAAADv/wEAAgAJAAEAAADv/wIAAgAJAAEAAADv/wMAAgAJAAEAAADv/wQAAgAJAAEAAADv/wUAAgAJAAEAAADv/wYAAgAJAAEAAADv/wcAAgAJAAEAAADv/wgAAgAJAAEAAADw//3/AgAJAAEAAADw//7/AgAJAAEAAADw////AgAJAAEAAADw/wAAAgAJAAEAAADw/wEAAgAJAAEAAADw/wIAAgAJAAEAAADw/wMAAgAJAAEAAADw/wQAAgAJAAEAAADw/wUAAgAJAAEAAADw/wYAAgAJAAEAAADw/wcAAgAJAAEAAADw/wgAAgAJAAEAAADx//3/AgAJAAEAAADx//7/AgAJAAEAAADx////AgAJAAEAAADx/wAAAgAJAAEAAADx/wEAAgAJAAEAAADx/wIAAgAJAAEAAADx/wMAAgAJAAEAAADx/wQAAgAJAAEAAADx/wUAAgAJAAEAAADx/wYAAgAJAAEAAADx/wcAAgAJAAEAAADx/wgAAgAJAAEAAADy//3/AgAJAAEAAADy//7/AgAJAAEAAADy////AgAJAAEAAADy/wAAAgAJAAEAAADy/wEAAgAJAAEAAADy/wIAAgAJAAEAAADy/wMAAgAJAAEAAADy/wQAAgAJAAEAAADy/wUAAgAJAAEAAADy/wYAAgAJAAEAAADy/wcAAgAJAAEAAADy/wgAAgAJAAEAAADz//3/AgAJAAEAAADz//7/AgAJAAEAAADz////AgAJAAEAAADz/wAAAgAJAAEAAADz/wEAAgAJAAEAAADz/wIAAgAJAAEAAADz/wMAAgAJAAEAAADz/wQAAgAJAAEAAADz/wUAAgAJAAEAAADz/wYAAgAJAAEAAADz/wcAAgAJAAEAAADz/wgAAgAJAAEAAAD0//3/AgAJAAEAAAD0//7/AgAJAAEAAAD0////AgAJAAEAAAD0/wAAAgAJAAEAAAD0/wEAAgAJAAEAAAD0/wIAAgAJAAEAAAD0/wMAAgAJAAEAAAD0/wQAAgAJAAEAAAD0/wUAAgAJAAEAAAD0/wYAAgAJAAEAAAD0/wcAAgAJAAEAAAD0/wgAAgAJAAEAAAD1//3/AgAJAAEAAAD1//7/AgAJAAEAAAD1////AgAJAAEAAAD1/wAAAgAJAAEAAAD1/wEAAgAJAAEAAAD1/wIAAgAJAAEAAAD1/wMAAgAJAAEAAAD1/wQAAgAJAAEAAAD1/wUAAgAJAAEAAAD1/wYAAgAJAAEAAAD1/wcAAgAJAAEAAAD1/wgAAgAJAAEAAAD2//3/AgAJAAEAAAD2//7/AgAJAAEAAAD2////AgAJAAEAAAD2/wAAAgAJAAEAAAD2/wEAAgAJAAEAAAD2/wIAAgAJAAEAAAD2/wMAAgAJAAEAAAD2/wQAAgAJAAEAAAD2/wUAAgAJAAEAAAD2/wYAAgAJAAEAAAD2/wcAAgAJAAEAAAD2/wgAAgAJAAEAAAD3//3/AgAJAAEAAAD3//7/AgAJAAEAAAD3////AgAJAAEAAAD3/wAAAgAJAAEAAAD3/wEAAgAJAAEAAAD3/wIAAgAJAAEAAAD3/wMAAgAJAAEAAAD3/wQAAgAJAAEAAAD3/wUAAgAJAAEAAAD3/wYAAgAJAAEAAAD3/wcAAgAJAAEAAAD3/wgAAgAJAAEAAAD4//3/AgAJAAEAAAD4//7/AgAJAAEAAAD4////AgAJAAEAAAD4/wAAAgAJAAEAAAD4/wEAAgAJAAEAAAD4/wIAAgAJAAEAAAD4/wMAAgAJAAEAAAD4/wQAAgAJAAEAAAD4/wUAAgAJAAEAAAD4/wYAAgAJAAEAAAD4/wcAAgAJAAEAAAD4/wgAAgAJAAEAAAD5//3/AgAJAAEAAAD5//7/AgAJAAEAAAD5////AgAJAAEAAAD5/wAAAgAJAAEAAAD5/wEAAgAJAAEAAAD5/wIAAgAJAAEAAAD5/wMAAgAJAAEAAAD5/wQAAgAJAAEAAAD5/wUAAgAJAAEAAAD5/wYAAgAJAAEAAAD5/wcAAgAJAAEAAAD5/wgAAgAJAAEAAAD6//3/AgAJAAEAAAD6//7/AgAJAAEAAAD6////AgAJAAEAAAD6/wAAAgAJAAEAAAD6/wEAAgAJAAEAAAD6/wIAAgAJAAEAAAD6/wMAAgAJAAEAAAD6/wQAAgAJAAEAAAD6/wUAAgAJAAEAAAD6/wYAAgAJAAEAAAD6/wcAAgAJAAEAAAD6/wgAAgAJAAEAAAD7//3/AgAJAAEAAAD7//7/AgAJAAEAAAD7////AgAJAAEAAAD7/wAAAgAJAAEAAAD7/wEAAgAJAAEAAAD7/wIAAgAJAAEAAAD7/wMAAgAJAAEAAAD7/wQAAgAJAAEAAAD7/wUAAgAJAAEAAAD7/wYAAgAJAAEAAAD7/wcAAgAJAAEAAAD7/wgAAgAJAAEAAAD8//3/AgAJAAEAAAD8//7/AgAJAAEAAAD8////AgAJAAEAAAD8/wAAAgAJAAEAAAD8/wEAAgAJAAEAAAD8/wIAAgAJAAEAAAD8/wMAAgAJAAEAAAD8/wQAAgAJAAEAAAD8/wUAAgAJAAEAAAD8/wYAAgAJAAEAAAD8/wcAAgAJAAEAAAD8/wgAAgAJAAEAAAD9//3/AgAJAAEAAAD9//7/AgAJAAEAAAD9////AgAJAAEAAAD9/wAAAgAJAAEAAAD9/wEAAgAJAAEAAAD9/wIAAgAJAAEAAAD9/wMAAgAJAAEAAAD9/wQAAgAJAAEAAAD9/wUAAgAJAAEAAAD9/wYAAgAJAAEAAAD9/wcAAgAJAAEAAAD9/wgAAgAJAAEAAAD+//3/AgAJAAEAAAD+//7/AgAJAAEAAAD+////AgAJAAEAAAD+/wAAAgAJAAEAAAD+/wEAAgAJAAEAAAD+/wIAAgAJAAEAAAD+/wMAAgAJAAEAAAD+/wQAAgAJAAEAAAD+/wUAAgAJAAEAAAD+/wYAAgAJAAEAAAD+/wcAAgAJAAEAAAD+/wgAAgAJAAEAAAD///3/AgAJAAEAAAD///7/AgAJAAEAAAD/////AgAJAAEAAAD//wAAAgAJAAEAAAD//wEAAgAJAAEAAAD//wIAAgAJAAEAAAD//wMAAgAJAAEAAAD//wQAAgAJAAEAAAD//wUAAgAJAAEAAAD//wYAAgAJAAEAAAD//wcAAgAJAAEAAAD//wgAAgAJAAEAAAAAAP3/AgAJAAEAAAAAAP7/AgAJAAEAAAAAAP//AgAJAAEAAAAAAAAAAgAJAAEAAAAAAAEAAgAJAAEAAAAAAAIAAgAJAAEAAAAAAAMAAgAJAAEAAAAAAAQAAgAJAAEAAAAAAAUAAgAJAAEAAAAAAAYAAgAJAAEAAAAAAAcAAgAJAAEAAAAAAAgAAgAJAAEAAAABAP3/AgAJAAEAAAABAP7/AgAJAAEAAAABAP//AgAJAAEAAAABAAAAAgAJAAEAAAABAAEAAgAJAAEAAAABAAIAAgAJAAEAAAABAAMAAgAJAAEAAAABAAQAAgAJAAEAAAABAAUAAgAJAAEAAAABAAYAAgAJAAEAAAABAAcAAgAJAAEAAAABAAgAAgAJAAEAAAACAP3/AgAJAAEAAAACAP7/AgAJAAEAAAACAP//AgAJAAEAAAACAAAAAgAJAAEAAAACAAEAAgAJAAEAAAACAAIAAgAJAAEAAAACAAMAAgAJAAEAAAACAAQAAgAJAAEAAAACAAUAAgAJAAEAAAACAAYAAgAJAAEAAAACAAcAAgAJAAEAAAACAAgAAgAJAAEAAAADAP3/AgAJAAEAAAADAP7/AgAJAAEAAAADAP//AgAJAAEAAAADAAAAAgAJAAEAAAADAAEAAgAJAAEAAAADAAIAAgAJAAEAAAADAAMAAgAJAAEAAAADAAQAAgAJAAEAAAADAAUAAgAJAAEAAAADAAYAAgAJAAEAAAADAAcAAgAJAAEAAAADAAgAAgAJAAEAAAAEAP3/AgAJAAEAAAAEAP7/AgAJAAEAAAAEAP//AgAJAAEAAAAEAAAAAgAJAAEAAAAEAAEAAgAJAAEAAAAEAAIAAgAJAAEAAAAEAAMAAgAJAAEAAAAEAAQAAgAJAAEAAAAEAAUAAgAJAAEAAAAEAAYAAgAJAAEAAAAEAAcAAgAJAAEAAAAEAAgAAgAJAAEAAAAFAP3/AgAJAAEAAAAFAP7/AgAJAAEAAAAFAP//AgAJAAEAAAAFAAAAAgAJAAEAAAAFAAEAAgAJAAEAAAAFAAIAAgAJAAEAAAAFAAMAAgAJAAEAAAAFAAQAAgAJAAEAAAAFAAUAAgAJAAEAAAAFAAYAAgAJAAEAAAAFAAcAAgAJAAEAAAAFAAgAAgAJAAEAAAAGAP3/AgAJAAEAAAAGAP7/AgAJAAEAAAAGAP//AgAJAAEAAAAGAAAAAgAJAAEAAAAGAAEAAgAJAAEAAAAGAAIAAgAJAAEAAAAGAAMAAgAJAAEAAAAGAAQAAgAJAAEAAAAGAAUAAgAJAAEAAAAGAAYAAgAJAAEAAAAGAAcAAgAJAAEAAAAGAAgAAgAJAAEAAAAHAP3/AgAJAAEAAAAHAP7/AgAJAAEAAAAHAP//AgAJAAEAAAAHAAAAAgAJAAEAAAAHAAEAAgAJAAEAAAAHAAIAAgAJAAEAAAAHAAMAAgAJAAEAAAAHAAQAAgAJAAEAAAAHAAUAAgAJAAEAAAAHAAYAAgAJAAEAAAAHAAcAAgAJAAEAAAAHAAgAAgAJAAEAAAAIAP3/AgAJAAEAAAAIAP7/AgAJAAEAAAAIAP//AgAJAAEAAAAIAAAAAgAJAAEAAAAIAAEAAgAJAAEAAAAIAAIAAgAJAAEAAAAIAAMAAgAJAAEAAAAIAAQAAgAJAAEAAAAIAAUAAgAJAAEAAAAIAAYAAgAJAAEAAAAIAAcAAgAJAAEAAAAIAAgAAgAJAAEAAAAJAP3/AgAJAAEAAAAJAP7/AgAJAAEAAAAJAP//AgAJAAEAAAAJAAAAAgAJAAEAAAAJAAEAAgAJAAEAAAAJAAIAAgAJAAEAAAAJAAMAAgAJAAEAAAAJAAQAAgAJAAEAAAAJAAUAAgAJAAEAAAAJAAYAAgAJAAEAAAAJAAcAAgAJAAEAAAAJAAgAAgAJAAEAAAAKAP3/AgAJAAEAAAAKAP7/AgAJAAEAAAAKAP//AgAJAAEAAAAKAAAAAgAJAAEAAAAKAAEAAgAJAAEAAAAKAAIAAgAJAAEAAAAKAAMAAgAJAAEAAAAKAAQAAgAJAAEAAAAKAAUAAgAJAAEAAAAKAAYAAgAJAAEAAAAKAAcAAgAJAAEAAAAKAAgAAgAJAAEAAAALAP3/AgAJAAEAAAALAP7/AgAJAAEAAAALAP//AgAJAAEAAAALAAAAAgAJAAEAAAALAAEAAgAJAAEAAAALAAIAAgAJAAEAAAALAAMAAgAJAAEAAAALAAQAAgAJAAEAAAALAAUAAgAJAAEAAAALAAYAAgAJAAEAAAALAAcAAgAJAAEAAAALAAgAAgAJAAEAAAAMAP3/AgAJAAEAAAAMAP7/AgAJAAEAAAAMAP//AgAJAAEAAAAMAAAAAgAJAAEAAAAMAAEAAgAJAAEAAAAMAAIAAgAJAAEAAAAMAAMAAgAJAAEAAAAMAAQAAgAJAAEAAAAMAAUAAgAJAAEAAAAMAAYAAgAJAAEAAAAMAAcAAgAJAAEAAAAMAAgAAgAJAAEAAAANAP3/AgAJAAEAAAANAP7/AgAJAAEAAAANAP//AgAJAAEAAAANAAAAAgAJAAEAAAANAAEAAgAJAAEAAAANAAIAAgAJAAEAAAANAAMAAgAJAAEAAAANAAQAAgAJAAEAAAANAAUAAgAJAAEAAAANAAYAAgAJAAEAAAANAAcAAgAJAAEAAAANAAgAAgAJAAEAAAAOAP3/AgAJAAEAAAAOAP7/AgAJAAEAAAAOAP//AgAJAAEAAAAOAAAAAgAJAAEAAAAOAAEAAgAJAAEAAAAOAAIAAgAJAAEAAAAOAAMAAgAJAAEAAAAOAAQAAgAJAAEAAAAOAAUAAgAJAAEAAAAOAAYAAgAJAAEAAAAOAAcAAgAJAAEAAAAOAAgAAgAJAAEAAAAPAP3/AgAJAAEAAAAPAP7/AgAJAAEAAAAPAP//AgAJAAEAAAAPAAAAAgAJAAEAAAAPAAEAAgAJAAEAAAAPAAIAAgAJAAEAAAAPAAMAAgAJAAEAAAAPAAQAAgAJAAEAAAAPAAUAAgAJAAEAAAAPAAYAAgAJAAEAAAAPAAcAAgAJAAEAAAAPAAgAAgAJAAEAAAA=")
tile_set = SubResource("TileSet_i56x7")

[node name="player2" parent="." groups=["players"] instance=ExtResource("6_ysy4v")]
position = Vector2(211, -227)
scale = Vector2(0.991084, 0.930777)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(35, -180)
zoom = Vector2(3, 3)

[node name="Stopwatch" parent="Camera2D" instance=ExtResource("7_dblw3")]
offset_left = -320.0
offset_top = -180.0
offset_right = -320.0
offset_bottom = -180.0

[node name="Voidbox" type="Area2D" parent="."]

[node name="KillZone" type="CollisionShape2D" parent="Voidbox"]
position = Vector2(0, 242)
shape = SubResource("WorldBoundaryShape2D_3rkf4")
script = ExtResource("8_3e66b")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-208, -224)
stream = ExtResource("8_v2fwn")
autoplay = true
parameters/looping = true

[connection signal="body_entered" from="Voidbox" to="Voidbox/KillZone" method="_on_voidbox_body_entered"]
